tests/dataset/tpc-ds/compiler/c/q27.error
/tmp/q27.c:234:3: error: unknown type name ‘customer_demo_t’
  234 |   customer_demo_t *data;
      |   ^~~~~~~~~~~~~~~
/tmp/q27.c: In function ‘create_customer_demo_list’:
/tmp/q27.c:239:31: error: ‘customer_demo_t’ undeclared (first use in this function); did you mean ‘CustomerDemo’?
  239 |   l.data = calloc(len, sizeof(customer_demo_t));
      |                               ^~~~~~~~~~~~~~~
      |                               CustomerDemo
/tmp/q27.c:239:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/q27.c: In function ‘test_TPCDS_Q27_averages_by_state’:
/tmp/q27.c:314:58: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  314 |   if (test_TPCDS_Q27_averages_by_state_result.len != tmp1.len) {
      |                                                          ^
      |                                                          ->
/tmp/q27.c:318:67: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  318 |       if (test_TPCDS_Q27_averages_by_state_result.data[i3] != tmp1.data[i3]) {
      |                                                                   ^
      |                                                                   ->
/tmp/q27.c: In function ‘main’:
/tmp/q27.c:400:45: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  400 |   test_TPCDS_Q27_averages_by_state_result = result;
      |                                             ^~~~~~
